# fastapi_boiler

./: Makefile  README.md  pyproject.toml  run.py
src/luthor/application/api/: router.py
src/luthor/entrypoints/: main_api.py
